fix bugs for right overlaping minor

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -49,7 +49,7 @@ tree-viewport{
 
 .tree-node-level-1:not(.active-first):not(.post-after-active){
   border-top: 1px solid lightgray;
-  width: 98%;
+  //width: 98%;
 }
 
 
